# terminalwrap

./: .SRCINFO  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  PKGBUILD  README.md  compile.sh  go.mod  main.go  terminalwrap.cpp
.github/workflows/: aur.yml  aur2.yml
