cmake_minimum_required(VERSION 3.10)
project(TerminalWrap LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -flto -funroll-loops -ftree-vectorize")
set(SOURCE terminalwrap.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist)
add_executable(terminalwrap ${SOURCE})
install(TARGETS terminalwrap DESTINATION /usr/bin)
